// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks for invalid username 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="CreateUsername-description"
  >
    Your username is an identifier that will appear on all of your comments.
  </div>
  <div
    className="coral coral-login-field CreateUsername-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="UsernameField-description"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value="x"
        />
      </div>
      <div
        className="ValidationMessage-root"
        role="alert"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon ValidationMessage-icon"
          >
            error
          </i>
          <span>
            Username must contain at least 3 characters.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="CreateUsername-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create username
    </button>
  </div>
</form>
`;

exports[`renders createUsername view 1`] = `
<div
  className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
  id="coral"
>
  <div>
    <div
      data-testid="createUsername-container"
    >
      <div
        className="coral coral-login-bar CreateUsername-bar"
        role="banner"
      >
        <div
          className="coral coral-login-title CreateUsername-title"
        >
          Create a username
        </div>
      </div>
      <main
        className="Main-root"
        data-testid="createUsername-main"
        id="create-username-main"
      >
        <form
          autoComplete="off"
          onSubmit={[Function]}
        >
          <div
            className="CreateUsername-description"
          >
            Your username is an identifier that will appear on all of your comments.
          </div>
          <div
            className="coral coral-login-field CreateUsername-field"
          >
            <div
              className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
            >
              <label
                className="InputLabel-root"
                htmlFor="username"
              >
                Username
              </label>
              <div
                className="UsernameField-description"
              >
                You may use “_” and “.” Spaces not permitted.
              </div>
              <div
                className="TextField-root TextField-fullWidth"
              >
                <input
                  className="TextField-input TextField-colorStreamBlue"
                  disabled={false}
                  id="username"
                  name="username"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="CreateUsername-actions"
          >
            <button
              className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
              data-variant="filled"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Create username
            </button>
          </div>
        </form>
      </main>
    </div>
  </div>
</div>
`;

exports[`shows error when submitting empty form 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="CreateUsername-description"
  >
    Your username is an identifier that will appear on all of your comments.
  </div>
  <div
    className="coral coral-login-field CreateUsername-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="UsernameField-description"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value=""
        />
      </div>
      <div
        className="ValidationMessage-root"
        role="alert"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon ValidationMessage-icon"
          >
            error
          </i>
          <span>
            This field is required.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="CreateUsername-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create username
    </button>
  </div>
</form>
`;

exports[`shows server error 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="CreateUsername-description"
  >
    Your username is an identifier that will appear on all of your comments.
  </div>
  <div
    className="coral coral-login-errorContainer CreateUsername-error"
  >
    <div
      className="CallOut-root CallOut-error CallOut-leftBorder coral coral-login-error"
    >
      <div
        className="CallOut-container"
      >
        <div
          className="CallOut-icon CallOut-error CallOut-leftIcon"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon"
          >
            error
          </i>
        </div>
        <div
          className="CallOut-content"
        >
          <div
            className="CallOut-title CallOut-titleBold"
          >
            server error

GraphQL request:4:3
3 | ) {
4 |   setUsername(input: $input) {
  |   ^
5 |     user {
          </div>
          <div
            className="CallOut-body"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="coral coral-login-field CreateUsername-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="UsernameField-description"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorStreamBlue"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value="hans"
        />
      </div>
    </div>
  </div>
  <div
    className="CreateUsername-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create username
    </button>
  </div>
</form>
`;

exports[`successfully sets username 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="CreateUsername-description"
  >
    Your username is an identifier that will appear on all of your comments.
  </div>
  <div
    className="coral coral-login-field CreateUsername-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="UsernameField-description"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorStreamBlue"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value="hans"
        />
      </div>
    </div>
  </div>
  <div
    className="CreateUsername-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create username
    </button>
  </div>
</form>
`;
